--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -10,5 +10,16 @@
         <head>
             <h1>AVEGNGERS</h1>
         </head>
+        <main>
+            <section class="personatges">
+                <img src="">
+                <img src="">
+                <img src="">
+                <img src="">
+                <img src="">
+                <img src="">
+                <img src="">
+            </section>
+        </main>
     </body>
 </html> 
