--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -12,13 +12,13 @@
         </head>
         <main>
             <section class="personatges">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <div class="petites">
+                    <picture class="antman">
+                        <source media="">
+                    </picture>
+                </div>
+                <div></div>
+                <div></div>
             </section>
         </main>
     </body>
