--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -14,112 +14,116 @@
             <section class="personatges">
                 <picture class="antman">
                     <source srcset="./img/sm/antman.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/antman.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/antman.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/antman.png">
+                    <div class="lletres">
+                        <p>1</p>
+                        <p>Antman</p>
+                    </div>
                 </picture>
                 <picture class="bucky">
                     <source srcset="./img/sm/bucky.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/bucky.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/bucky.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/bucky.png">
                 </picture>
                 <picture class="bw">
                     <source srcset="./img/sm/bw.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/bw.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/bw.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/bw.png">
                 </picture>
                 <picture class="cap">
                     <source srcset="./img/sm/cap.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/cap.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/cap.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/cap.png">
                 </picture>
                 <picture class="drax">
                     <source srcset="./img/sm/drax.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/drax.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/drax.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/drax.png">
                 </picture>
                 <picture class="falcon">
                     <source srcset="./img/sm/falcon.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/falcon.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/falcon.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/falcon.png">
                 </picture>
                 <picture class="fury">
                     <source srcset="./img/sm/fury.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/fury.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/fury.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/fury.png">
                 </picture>
                 <picture class="gamora">
                     <source srcset="./img/sm/gamora.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/gamora.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/gamora.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/gamora.png">
                 </picture>
                 <picture class="groot">
                     <source srcset="./img/sm/groot.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/groot.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/groot.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/groot.png">
                 </picture>
                 <picture class="hawkeye">
                     <source srcset="./img/sm/hawkeye.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/hawkeye.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/hawkeye.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/hawkeye.png">
                 </picture>
                 <picture class="hulk">
                     <source srcset="./img/sm/hulk.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/hulk.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/hulk.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/hulk.png">
                 </picture>
                 <picture class="ironman">
                     <source srcset="./img/sm/ironman.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/ironman.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/ironman.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/ironman.png">
                 </picture>
                 <picture class="mantis">
                     <source srcset="./img/sm/mantis.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/mantis.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/mantis.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/mantis.png">
                 </picture>
                 <picture class="maria">
                     <source srcset="./img/sm/maria.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/maria.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/maria.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/maria.png">
                 </picture>
                 <picture class="marvel">
                     <source srcset="./img/sm/marvel.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/marvel.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/marvel.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/marvel.png">
                 </picture>
                 <picture class="nebula">
                     <source srcset="./img/sm/nebula.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/nebula.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/nebula.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/nebula.png">
                 </picture>
                 <picture class="rhodes">
                     <source srcset="./img/sm/rhodes.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/rhodes.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/rhodes.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/rhodes.png">
                 </picture>
                 <picture class="scarlet">
                     <source srcset="./img/sm/scarlet.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/scarlet.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/scarlet.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/scarlet.png">
                 </picture>
                 <picture class="shuri">
                     <source srcset="./img/sm/shuri.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/shuri.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/shuri.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/shuri.png">
                 </picture>
                 <picture class="starlord">
                     <source srcset="./img/sm/starlord.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/starlord.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/starlord.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/starlord.png">
                 </picture>
                 <picture class="thanos">
                     <source srcset="./img/sm/thanos.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/thanos.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/thanos.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/thanos.png">
                 </picture>
                 <picture class="thor">
                     <source srcset="./img/sm/thor.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/thor.png" media="(min-width:1101px   max-width: 1200px)">
+                    <source srcset="./img/land/thor.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/thor.png">
                 </picture>
             </section>
