--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -74,7 +74,7 @@
           <!-- Aqui acaba el carrousel -->
 
           
-            <div id="part2" class="container-fluid mt-3">
+            <div id="part2" class="container-fluid mt-3 p-0">
               <!-- Part de our service -->
                 <div id="ourservice" class="text-center">
                   <h1>Our service <hr class="mx-auto grossor mb-4"></h1>
@@ -211,10 +211,13 @@
                     </div>
                   </div>
                 </div>
-
                 <!-- fi part de les fotos -->
               </div>
               <!-- Fi de la part de recomendacions -->
+              <div id="ourclients" class="container-fluid p-0">
+                <h1 class="text-center mt-5">What Our Clients Say<hr class="mx-auto grossor mb-4"></h1>
+                <img src="./imatges/bengala/descarga.jpg" class="w-100">
+              </div>
             </div>
         </main>
     </body>
