--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -189,24 +189,24 @@
                 <!-- part de les fotos -->
                  <div class="container mt-5">
                   <div class="row">
-                    <div class="col-lg-4 p-0 m-0">
+                    <div class="col-3 p-0 m-0">
                       <img src="./imatges/recomendacions/img1.avif" class="img-fluid">
                     </div>
-                    <div class="col-lg-4 p-0 m-0">
+                    <div class="col-4 p-0 m-0">
                       <img src="./imatges/recomendacions/img2.jpg" class="img-fluid">
                     </div>
-                    <div class="col-lg-4 p-0 m-0">
+                    <div class="col-4 p-0 m-0">
                       <img src="./imatges/recomendacions/img3.jpg" class="img-fluid">
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-lg-4 p-0 m-0">
+                    <div class="col-3 p-0 m-0">
                       <img src="./imatges/recomendacions/img4.jpg" class="img-fluid">
                     </div>
-                    <div class="col-lg-4 p-0 m-0">
+                    <div class="col-4 p-0 m-0">
                       <img src="./imatges/recomendacions/img5.webp" class="img-fluid">
                     </div>
-                    <div class="col-lg-4 p-0 m-0">
+                    <div class="col-4 p-0 m-0">
                       <img src="./imatges/recomendacions/img6.jpg" class="img-fluid">
                     </div>
                   </div>
@@ -214,7 +214,7 @@
                 <!-- fi part de les fotos -->
               </div>
               <!-- Fi de la part de recomendacions -->
-              <div id="ourclients" class="container-fluid p-0">
+              <div id="ourclients" class="container-fluid p-0 ">
                 <h1 class="text-center mt-5">What Our Clients Say<hr class="mx-auto grossor mb-4"></h1>
                 <img src="./imatges/bengala/descarga.jpg" class="w-100">
               </div>
