--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
 	    <title>title</title>
@@ -220,55 +220,64 @@
                 </div>
               </div>
               <div id="facts" class="container-fluid pt-5">
-                <div class="col">
-                  <div class="row">
-                    <h1>Ter Stegen Facts</h1>
-                  </div>
-                  <div class="row">
-                    <div class="col d-flex align-items-center w-25">
-                      <h2>😄</h2>
+                <div class="d-flex">
+                  <div class="col-auto">
+                    <div class="row">
+                      <h1>Ter Stegen Facts</h1>
+                    </div>
+                    <div class="row mt-3">
+                      <div class="col-auto d-flex align-items-center">
+                        <h2>😄</h2>
+                      </div>
+                      <div class="col">
+                        <div class="row">
+                          <h2 class="text-warning">1200+ Happy Clients</h2>
+                        </div>
+                        <div class="row">
+                          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                        </div>
+                      </div>
+                    </div>
+                  <div class="row mt-3">
+                    <div class="col-auto d-flex align-items-center">
+                      <h2>🗹</h2>
                     </div>
                     <div class="col">
                       <div class="row">
-                        <h2 class="text-warning">1200+ Happy Clients</h2>
+                        <h2 class="text-warning">600+ Tours Offered</h2>
                       </div>
                       <div class="row">
                         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
                       </div>
                     </div>
                   </div>
-                <div class="row mt-3">
-                  <div class="col d-flex align-items-center">
-                    <h2>🗹</h2>
-                  </div>
-                  <div class="col">
-                    <div class="row">
-                      <h2 class="text-warning">600+ Tours Offered</h2>
+                  <div class="row mt-3">
+                    <div class="col-auto d-flex align-items-center">
+                      <h2>🏆</h2>
                     </div>
-                    <div class="row">
-                      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="row mt-3">
-                  <div class="col d-flex align-items-center">
-                    <h2>🏆</h2>
-                  </div>
-                  <div class="col">
-                    <div class="row">
-                      <h2 class="text-warning">25 Awars Won</h2>
-                    </div>
-                    <div class="row">
-                      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                    <div class="col">
+                      <div class="row">
+                        <h2 class="text-warning">25 Awars Won</h2>
+                      </div>
+                      <div class="row">
+                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col">
-                <div class="row">
-                  <h2>Questions & Answers</h2>
+                <div class="col">
+                  <div class="row">
+                    <h2>Questions & Answers</h2>
+                  </div>
+                  <div id="row2" class="row">
+                    <div>
+                      <div>
+                        <p>F.A.Q</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
+                </div>
             </div>
         </main>
     </body>
