--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -219,64 +219,97 @@
                   </div>
                 </div>
               </div>
-              <div id="facts" class="container-fluid pt-5">
+              <div id="facts" class="container-fluid pt-5 d-flex justify-content-evenly">
                 <div class="d-flex">
-                  <div class="col-auto">
-                    <div class="row">
-                      <h1>Ter Stegen Facts</h1>
-                    </div>
+                  <div class="col-auto me-5">
+                      <div class="row">
+                        <h1>Ter Stegen Facts</h1>
+                      </div>
+                      <div class="row mt-3">
+                        <div class="col-auto d-flex align-items-center">
+                          <h2>😄</h2>
+                        </div>
+                        <div class="col">
+                          <div class="row">
+                            <h2 class="text-warning">1200+ Happy Clients</h2>
+                          </div>
+                          <div class="row">
+                            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                          </div>
+                        </div>
+                      </div>
                     <div class="row mt-3">
                       <div class="col-auto d-flex align-items-center">
-                        <h2>😄</h2>
+                        <h2>🗹</h2>
                       </div>
                       <div class="col">
                         <div class="row">
-                          <h2 class="text-warning">1200+ Happy Clients</h2>
+                          <h2 class="text-warning">600+ Tours Offered</h2>
                         </div>
                         <div class="row">
                           <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
                         </div>
                       </div>
                     </div>
-                  <div class="row mt-3">
-                    <div class="col-auto d-flex align-items-center">
-                      <h2>🗹</h2>
-                    </div>
-                    <div class="col">
-                      <div class="row">
-                        <h2 class="text-warning">600+ Tours Offered</h2>
+                    <div class="row mt-3">
+                      <div class="col-auto d-flex align-items-center">
+                        <h2>🏆</h2>
                       </div>
-                      <div class="row">
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row mt-3">
-                    <div class="col-auto d-flex align-items-center">
-                      <h2>🏆</h2>
-                    </div>
-                    <div class="col">
-                      <div class="row">
-                        <h2 class="text-warning">25 Awars Won</h2>
-                      </div>
-                      <div class="row">
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                      <div class="col">
+                        <div class="row">
+                          <h2 class="text-warning">25 Awars Won</h2>
+                        </div>
+                        <div class="row">
+                          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="col">
-                  <div class="row">
-                    <h2>Questions & Answers</h2>
-                  </div>
-                  <div id="row2" class="row">
-                    <div>
-                      <div>
-                        <p>F.A.Q</p>
+                  <div class="col ms-5">
+                    <div class="row">
+                      <h2>Questions & Answers</h2>
+                    </div>
+                    <div class="row">
+                      <div class="accordion accordion-flush" id="acc">
+                        <div class="accordion-item">
+                          <p class="accordion-header ms-4" id="flush-headingOne">F.A.Q. ?!</p>
+                        </div>
+                        <div class="accordion-item">
+                          <p class="accordion-header ms-4" id="flush-headingOne">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                            </button>
+                          </h2>
+                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                            </button>
+                          </h2>
+                          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                            </button>
+                          </h2>
+                          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
                 </div>
             </div>
         </main>
