--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -10,8 +10,8 @@
 	</head>
 
     <body class="container-fluid p-0">
-      <header class="container-fluid text-white bg-dark bg-gradient d-flex justify-content-center">
-        <nav class="navbar navbar-expand-lg">
+      <header class="container-fluid text-white bg-dark bg-gradient d-flex d-lg-justify-content-center d-sm-flex-justify-content-start">
+        <nav class="navbar navbar-expand-lg navbar-expand-sm">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav align-items-center">
@@ -21,10 +21,10 @@
                         <li class="nav-item me-5">
                             <h4 class="nav-link text-light">Travel Services</h4>
                         </li>
-                        <li class="nav-item me-5">
+                        <li class="nav-item me-5 d-sm-none">
                             <a class="nav-link text-light" href="#">Home</a>
-                        </li>
-                        <li class="nav-item dropdown me-5">
+                        </li >
+                        <li class="nav-item dropdown me-5 d-sm-none">
                             <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Our Services</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Flights</a></li>
@@ -32,17 +32,17 @@
                                 <li><a class="dropdown-item" href="#">Contact</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item me-5">
+                        <li class="nav-item me-5 d-sm-none">
                           <a class="nav-link text-light" href="#">Flights</a>
-                      </li>
-                      <li class="nav-item me-5">
-                        <a class="nav-link text-light" href="#">Hotels</a>
-                      </li>
-                      <li class="nav-item me-5">
-                        <a class="nav-link text-light" href="#">Contact</a>
-                      </li>
+                        </li>
+                        <li class="nav-item me-5 d-sm-none">
+                          <a class="nav-link text-light" href="#">Hotels</a>
+                        </li>
+                        <li class="nav-item me-5 d-sm-none">
+                          <a class="nav-link text-light" href="#">Contact</a>
+                        </li>
                     </ul>
-                    <form class="d-flex">
+                    <form class="d-flex d-sm-none">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
@@ -52,7 +52,7 @@
     </header>
     
 
-        <main class="container-fluid p-0">
+        <!-- <main class="container-fluid p-0">
             <div id="carrousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -367,7 +367,7 @@
               </div>
             </div>
           </div>
-        </footer>
+        </footer> -->
     </body>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
