--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -7,25 +7,27 @@
 	</head>
 
     <body>
-        <head>
+        <header>
             <h1>AVEGNGERS</h1>
-        </head>
+        </header>
         <main>
             <section class="personatges">
                 <picture class="antman">
                     <source srcset="./img/sm/antman.png" media="(max-width: 800px)">
                     <source srcset="./img/land/antman.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/antman.png">
-                    <p>1</p>
-                    <p>Antman</p>
+                    <div class="lletres">
+                        <p>1</p>
+                        <p>Antman</p>
+                    </div>
                 </picture>
                 <picture class="bucky">
                     <source srcset="./img/sm/bucky.png" media="(max-width: 800px)">
                     <source srcset="./img/land/bucky.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/bucky.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>2</p>
+                        <p>Bucky</p>
                     </div>
                 </picture>
                 <picture class="bw">
@@ -33,8 +35,8 @@
                     <source srcset="./img/land/bw.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/bw.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>3</p>
+                        <p>Black widow</p>
                     </div>
                 </picture>
                 <picture class="cap">
@@ -42,8 +44,8 @@
                     <source srcset="./img/land/cap.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/cap.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>4</p>
+                        <p>America Captain</p>
                     </div>
                 </picture>
                 <picture class="drax">
@@ -51,8 +53,8 @@
                     <source srcset="./img/land/drax.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/drax.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>4</p>
+                        <p>Drax</p>
                     </div>
                 </picture>
                 <picture class="falcon">
@@ -60,8 +62,8 @@
                     <source srcset="./img/land/falcon.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/falcon.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>5</p>
+                        <p>Falcon</p>
                     </div>
                 </picture>
                 <picture class="fury">
@@ -69,8 +71,8 @@
                     <source srcset="./img/land/fury.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/fury.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>6</p>
+                        <p>Fury</p>
                     </div>
                 </picture>
                 <picture class="gamora">
@@ -78,8 +80,8 @@
                     <source srcset="./img/land/gamora.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/gamora.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>7</p>
+                        <p>Gamora</p>
                     </div>
                 </picture>
                 <picture class="groot">
@@ -87,8 +89,8 @@
                     <source srcset="./img/land/groot.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/groot.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>8</p>
+                        <p>Groot</p>
                     </div>
                 </picture>
                 <picture class="hawkeye">
@@ -96,8 +98,8 @@
                     <source srcset="./img/land/hawkeye.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/hawkeye.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>9</p>
+                        <p>Hawkeye</p>
                     </div>
                 </picture>
                 <picture class="hulk">
@@ -105,8 +107,8 @@
                     <source srcset="./img/land/hulk.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/hulk.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>10</p>
+                        <p>Hulk</p>
                     </div>
                 </picture>
                 <picture class="ironman">
@@ -114,8 +116,8 @@
                     <source srcset="./img/land/ironman.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/ironman.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>11</p>
+                        <p>Ironman</p>
                     </div>
                 </picture>
                 <picture class="mantis">
@@ -123,8 +125,8 @@
                     <source srcset="./img/land/mantis.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/mantis.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>12</p>
+                        <p>Mantis</p>
                     </div>
                 </picture>
                 <picture class="maria">
@@ -132,8 +134,8 @@
                     <source srcset="./img/land/maria.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/maria.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>13</p>
+                        <p>Maria</p>
                     </div>
                 </picture>
                 <picture class="marvel">
@@ -141,8 +143,8 @@
                     <source srcset="./img/land/marvel.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/marvel.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>14</p>
+                        <p>Marvel</p>
                     </div>
                 </picture>
                 <picture class="nebula">
@@ -150,8 +152,8 @@
                     <source srcset="./img/land/nebula.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/nebula.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>15</p>
+                        <p>Nebula</p>
                     </div>
                 </picture>
                 <picture class="rhodes">
@@ -159,8 +161,8 @@
                     <source srcset="./img/land/rhodes.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/rhodes.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>16</p>
+                        <p>Rhodes</p>
                     </div>
                 </picture>
                 <picture class="scarlet">
@@ -168,8 +170,8 @@
                     <source srcset="./img/land/scarlet.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/scarlet.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>17</p>
+                        <p>Scarlett</p>
                     </div>
                 </picture>
                 <picture class="shuri">
@@ -177,8 +179,8 @@
                     <source srcset="./img/land/shuri.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/shuri.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>18</p>
+                        <p>Shuri</p>
                     </div>
                 </picture>
                 <picture class="starlord">
@@ -186,8 +188,8 @@
                     <source srcset="./img/land/starlord.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/starlord.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>19</p>
+                        <p>Starlord</p>
                     </div>
                 </picture>
                 <picture class="thanos">
@@ -195,8 +197,8 @@
                     <source srcset="./img/land/thanos.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/thanos.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>20</p>
+                        <p>Thanos</p>
                     </div>
                 </picture>
                 <picture class="thor">
@@ -204,8 +206,8 @@
                     <source srcset="./img/land/thor.png" media="(min-width:1101px   max-width: 1600px)">
                     <img src="img/lg/thor.png">
                     <div class="lletres">
-                        <p>1</p>
-                        <p>Antman</p>
+                        <p>21</p>
+                        <p>Thor</p>
                     </div>
                 </picture>
             </section>
