--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -21,7 +21,7 @@
                         <li class="nav-item me-5">
                             <h4 class="nav-link text-light">Travel Services</h4>
                         </li>
-                        <li class="nav-item me-5 d-none d-lg-block">
+                        <li class="nav-item me-5   d-lg-block">
                             <a class="nav-link text-light" href="#">Home</a>
                         </li >
                         <li class="nav-item dropdown me-5 d-none d-lg-block">
