--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -4,6 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
 		<link rel="stylesheet" type="text/css" href="reset.css" />
 		<link rel="stylesheet" type="text/css" href="estil.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	</head>
 
     <body>
@@ -13,8 +15,8 @@
         <main>
             <section class="personatges">
                 <picture class="antman">
-                    <source srcset="./img/sm/antman.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/antman.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/antman.png" media="(max-width: 730)">
+                    <source srcset="./img/land/antman.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/antman.png">
                     <div class="lletres">
                         <p>1</p>
